...
import MaterialIcons from "@expo/vector-icons/MaterialIcons";

export const HeaderBackButton: React.FC<HeaderBackButtonProps> = props => {
  const navigation = useNavigation();
  return (
    <TouchableOpacity
      testID="back-button"
      hitSlop={{ top: 10, bottom: 10 }}
      onPress={() => navigation.goBack()}
      style={styles.headerLeftContainer}>
      <ChevronLeft stroke={Color.white} />
    </TouchableOpacity>
  );
...
  );
};

export const HeaderSubmitButton = ({ onPress }: HeaderRightProps) => {
  return (
    <TouchableOpacity
      testID="submit-btn"
      style={styles.headerRightContainer}
      onPress={onPress}>
      <CheckGoodIcon />
    </TouchableOpacity>
  );
};
...
