...
};

export default Schedules;

const Actions: IActionProps[] = [
  {
    text: "Lịch hẹn mới",
    icon: <CalendarIcon testID="createMeeting" />,
    color: "white",
    name: "meeting",
    margin: 4,
  },
  {
...
