...
          return <LoopIcon width={24} height={24} />;
        },
        textAction: "",
        action: async () => {},
      },
      description: {
        fieldName: "Mô tả",
        renderIcon: () => {
          return <ParagraphIcon width={24} height={24} />;
        },
        textAction: "",
        action: () => {},
      },
...
