...
              })
            }>
            <View style={styles.commonRoom}>
              <View style={styles.iconBox}>
                <GroupIcon width={22} height={22} />
              </View>
              <Text style={styles.commonRoomText}>Cuộc trò chuyện chung</Text>
            </View>
          </TouchableOpacity>

          <SizedBox height={10} />
          <Line height={1} />
          <SizedBox height={10} />
...
