...
      {isOwner ? (
        <View style={styles.emojiPane}>
          <View style={styles.actionBox}>
            {action?.editMessage && (
              <TouchableOpacity
                style={commonStyles.actionButton}
                testID="edit-icon"
                onPress={onEditMessage}>
                <PencilEditOffice width={24} height={24} />
              </TouchableOpacity>
            )}

            {action?.deleteMessage && (
...
                onPress={onPinMessage}>
                <PinMessageIcon width={24} height={24} />
              </TouchableOpacity>
            )}
            {["TEXT"].includes(message.type) && (
              <TouchableOpacity
                testID="copy-icon"
                style={commonStyles.actionButton}
                onPress={onCopy}>
                <CopyToClipboardIcon width={24} height={24} />
              </TouchableOpacity>
            )}
            {action?.replyMessage && (
...
