...
      <ContextMenuModal
        visible={visible}
        onDismiss={hideModal}
        containerStyle={containerStyle}
      />
      <Animated.View
        testID="pinned-msg"
        style={[styles.container, expanding && styles.expandCtn]}
        layout={CustomLayoutTransition}>
        <View style={expanding ? styles.headerCtn : { zIndex: 2 }}>
          {expanding && (
            <Animated.Text entering={FadeIn.delay(500)} style={styles.title}>
              Danh sách đã ghim
            </Animated.Text>
          )}
          <TouchableOpacity
            testID="expand-pin-msg-icon"
            style={[styles.moreBtn, expanding && styles.rotate]}
            onPress={expand}>
            <ArrowheadDownIcon fill="black" />
          </TouchableOpacity>
        </View>
        <Animated.View
...
