...

        <View style={styles.optionItemList}>{renderVoteItems}</View>
      </View>
      <View>
        <TouchableOpacity
          style={commonStyles.actionButton}
          testID="pin-icon"
          onPress={onPinMessage}>
          <PinMessageIcon width={24} height={24} />
        </TouchableOpacity>
      </View>
    </View>
  );
...
