...
              </View>
            )}
            <ScrollView
              style={styles.richEditorCtn}
              showsVerticalScrollIndicator={false}>
              <RichEditor
                testID="chatbox"
                editorInitializedCallback={() => {
                  RichTextRef?.current?.commandDOM(
                    `\
                    var script = document.createElement('script');\
                    script.src="https://cdnjs.cloudflare.com/ajax/libs/rangy/1.3.1/rangy-core.min.js";\
                    script.integrity="sha512-ZCkgV0SdoJJvBjlkwMpNZFSQzDWtB2ftYwOJQqwQUaXjfVLeUrxIfPMCxSaxVCXfFL82ccmjn6TTbkXjL3w2pA==";
...
